# cstl

./: .clang-format  .gitignore  .travis.yml  API-STYLE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  facilio.pc.in  fio-stl.h  fio-stl.md  fio-stl.unified-API.md  makefile
.github/workflows/: c-cpp.yml  cmake.yml  macos-c-cpp.yml  nightly.yml  windows.yml  windows_clang.yml  windows_mignw.yml  windows_mingw.yml
benchmarks/: compression.c  core.c  crypto.c  malloc.c  math-mul.c  memalt.c  mlkem.c  ntt.c  p256-keypair-vs-mul.c  p256-vs-openssl.c  rsa-sign.c
docs/: 404 ipc.md
examples/: array.c  bstr.c  chat.c  client.c  docs-examples.c  fiobj.c  glob.c  json_find.c  map.c  server.c  string.c
extras/: 2026-02-10 000 ed25519-optimization-research.md  RESP3.md  fio.c  fio.h
extras/http/: http-handle.c  http-handle.h
extras/parsers/: http1_parser.h  websocket_parser.h
fio-stl/: 000 copyright.h  000 core.h  000 core.md  000 dependencies.h  000 logging.h  000 logging.md  000 memalt.h  001 atomics and locks.md  001 bit operations.md  001 compiler attributes.md  001 constant time.md  001 endian.md  001 fx86.h  001 header.h  001 header.md  001 linked lists.md  001 logging.h  001 logging.md  001 math.md  001 memalt.h  001 memalt.md  001 memory primitives.md  001 os detection.md  001 patches.h  001 random core.md  001 simd.md  001 static alloc.md  001 string info.md  001 utf8.md  001 vector math.md  001 version and settings.md  002 atol.h  002 atol.md  002 atomics.h  002 atomics.md  002 crc32.h  002 crc32.md  002 files.h  002 files.md  002 glob matching.h  (+279 more)
lib/: fio.c
parsers/: http1_parser.h
research/: 2026-07-21 000 x509 der codec refactor plan.md
stl_slices/: 000 header.h  000 header.md  001 dependencies.h  001 patches.h  002 logging.h  002 logging.md  003 atomics.h  003 atomics.md  004 bitwise.h  004 bitwise.md  005 math.h  005 math.md  005 riskyhash.h  005 riskyhash.md  005 sha1.h  006 atol.h  006 atol.md  007 threads.h  007 threads.md  007 url.h  007 url.md  008 json.md  008 math.h  010 mem.h  010 mem.md  010 random.h  010 riskyhash.h  010 riskyhash.md  011 sha1.h  011 sha1.md  011 time.h  012 chacha20poly1305.h  012 chacha20poly1305.md  012 queue.h  012 queue.md  013 cli.h  014 sock.h  014 sock.md  020 imap.h  020 linked lists.h  (+92 more)
stress/: http1-audit.c  ipc.c  mustache-audit.c  p256-keypair-debug.c  pubsub-history-fanout.c  tls13-openssl-roundtrip.c
tests/: aes.c  argon2.c  array.c  asn1.c  atol.c  atomics.c  base64.c  blake2.c  brotli.c  chacha.c  chat.c  cli.c  client.c  compare-mul.c  compile-check.c  core.c  cpp.cpp  crc32.c  crypto-core.c  deflate.c  der.c  ed25519.c  entities.c  fastpath-perf.c  file-utils.c  files.c  fiobj.c  fx86.c  gfm-spec-runner.c  gfm.c  glob-matching.c  hash-avalanche.c  hash.c  hkdf.c  http-handle.c  http.c  http1-parser-old.c  http1-parser.c  http1-parser.h  http_parser.c  (+117 more)
tests/http/: http-handle.c  http-handle.h
